objects/LLC_BI__Product_Collateral_Type__c.object
<CustomObject>
    <description>This junction object enables a user to connect a collateral type to a product in the product catalog.</description>
    <fields>
        <fullName>LLC_BI__Automate_Collateral_Pledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The administrator sets this optional checkbox to true to bypass the pledge process. This automatically sets the pledge to the lesser of the loan value or the available lendable value. By default, it is false.</description>
        <inlineHelpText>Check this box if you wish to automate the pledge process for this product and collateral type combination.</inlineHelpText>
        <label>Automate Collateral Pledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Use this lookup field to select a collateral type to connect to a product.</description>
        <inlineHelpText>Use this lookup field to select a collateral type to connect to a product.</inlineHelpText>
        <label>Collateral Type</label>
        <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral Types</relationshipLabel>
        <relationshipName>Collateral_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Filter_In_Branch_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this optional checkbox field to filter the product&apos;s associated internal collateral type and sub-type picklists. The system displays the associated collateral types through product collateral type records. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox to enable collateral type limiting for the collateral type associated with this record</inlineHelpText>
        <label>Filter In-Branch Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Filter_In_Branch_Leased_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this optional checkbox field to filter the product&apos;s associated internal asset type and sub-type picklists. The system displays the associated asset types through product asset type records. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox to enable asset type limiting for the asset collateral type associated with this record.</inlineHelpText>
        <label>Filter In-Branch Leased Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if the collateral type you have connected to the product is the default collateral type.</description>
        <inlineHelpText>Select this checkbox if the collateral type you have connected to the product is the default collateral type.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_Type_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The administrator populates this optional lookup field to associate the Product Collateral Type to the policy type for Auto Advance Rate Configuration.</description>
        <inlineHelpText>Set this field to the applicable auto advance rate policy that is run in matrix manager.</inlineHelpText>
        <label>Policy Type ID</label>
        <referenceTo>LLC_BI__Policy_Type__c</referenceTo>
        <relationshipLabel>Product Collateral Types</relationshipLabel>
        <relationshipName>Product_Collateral_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Use this lookup field to select a product to connect to a collateral type.</description>
        <inlineHelpText>Use this lookup field to select a product to connect to a collateral type.</inlineHelpText>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Providers__c</fullName>
        <description>Administrators populate this optional text field to inform the system which external valuation provider to use. This field supports multiple valuations providers using a comma delimited list. By default, this field is unpopulated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter external valuations providers in a comma delimited list to allow the system to assign valuation methods to Product-Collateral type.</inlineHelpText>
        <label>Valuation Providers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nPortal__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to enable the collateral type for the product in Customer Portal.</description>
        <inlineHelpText>Select this checkbox to enable the collateral type for the product in Customer Portal.</inlineHelpText>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Collateral Type</label>
    <nameField>
        <displayFormat>PCT-{00000000}</displayFormat>
        <label>number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Collateral Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>